--- a/src/app/dashboard/offers/offer-lists/offer-lists.component.html
+++ b/src/app/dashboard/offers/offer-lists/offer-lists.component.html
@@ -3,28 +3,57 @@
     <div class="ibox-body">
       <h5 class="font-strong mb-4">LES OFFRES</h5>
       <div class="flexbox mb-4">
-        <div class="flexbox">
-          <label class="mb-0 mr-2">Status:</label>
-          <select class="selectpicker show-tick form-control" id="type-filter" title="Veuillez choisir" data-style="btn-solid"
-            data-width="200px">
-            <option value="">Tout</option>
-            <option value="pending">En attente</option>
-            <option value="publish">Publié</option>
-          </select>
-        </div>
-        <div class="input-group-icon input-group-icon-left mr-3">
-          <span class="input-icon input-icon-right font-16"><i class="ti-search"></i></span>
-          <input class="form-control form-control-rounded form-control-solid" id="key-search" type="text" placeholder="Rechercher ...">
+        <div class="row">
+          <div class="col-8">
+            <div class="container mb-4">
+              <div class="row justify-content-start">
+                <div class="col-6">
+                  <div class="flexbox">
+                    <label class="mb-0 mr-2">Publication:</label>
+                    <select class="selectpicker show-tick form-control" id="type-publication" title="Veuillez choisir"
+                      data-style="btn-solid" data-width="200px">
+                      <option value="">Tout</option>
+                      <option value="pending">En attente</option>
+                      <option value="publish">Publier</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="flexbox">
+                    <label class="mb-0 mr-2">Status:</label>
+                    <select class="selectpicker show-tick form-control" id="type-status" title="Veuillez choisir"
+                      data-style="btn-solid" data-width="200px">
+                      <option value="">Tout</option>
+                      <option value="1">Activer</option>
+                      <option value="0">Désactiver</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-4">
+            <div class="flexbox">
+              <div class="input-group-icon input-group-icon-left mr-3">
+                <span class="input-icon input-icon-right font-16"><i class="ti-search"></i></span>
+                <input class="form-control form-control-rounded form-control-solid" id="key-search" type="text"
+                  placeholder="Rechercher ...">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
       <div class="table-responsive row">
 
         <table class="table table-bordered table-hover" id="orders-table">
           <thead class="thead-default thead-lg">
             <tr>
               <th>#</th>
-              <th>Réference</th>
               <th>Poste occupé</th>
+              <th>Réference</th>
+              <th>Publication</th>
               <th>Date limite</th>
               <th>Status</th>
               <th>Secteur d'activité</th>
