--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -1,6 +1,6 @@
 <nav class="page-sidebar">
   <div class="page-brand">
-    <a routerLink="/index">
+    <a routerLink="/">
       <span class="brand">ITJOB</span>
     </a>
   </div>
@@ -24,7 +24,7 @@
           <h5 class="menu-item-title">Utilisateurs</h5><small class="menu-item-text">Liste des utilisateurs</small>
         </div>
       </a>
-      <a [routerLink]="['/candidat-list']" routerLinkActive="router-link-active"><i class="ti-files menu-item-icon"></i>
+      <a [routerLink]="['/candidat-lists']" routerLinkActive="router-link-active"><i class="ti-files menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Candidats
             <span class="badge badge-pink badge-circle ml-2">4</span>
