--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
 .form-control {
   font-family: "Poppins" !important;
 }
+
+ng-select.ng-invalid .ng-select-container {
+  border-color: #dc3545;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 3px #fde6e8;
+}
