Added candidat form editor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- BEGIN PAGE LOADER  -->
 <div class="preloader-backdrop">
-  <div class="page-preloader">Loading</div>
+  <div class="page-preloader">Chargement</div>
 </div>
 <!-- END PAGE LOADER  -->
 
