--- a/src/app/dashboard/offers/offer-edit/offer-edit.component.html
+++ b/src/app/dashboard/offers/offer-edit/offer-edit.component.html
@@ -4,10 +4,11 @@
       <div class="row">
         <div class="col-4 mb-4">
           <a class="btn btn-primary btn-sm btn-air mr-2" [routerLink]="['/offer-lists']">Retour</a>
+          <a class="btn btn-secondary btn-sm btn-air mr-2" target="_blank" [href]="Offer.offer_url">Voir l'offre</a>
         </div>
       </div>
-      <h5 class="font-strong mb-5">
-        Mise à jour
+      <h5 class="font-strong mb-3">
+        {{Editor.postPromote}}
         <div *ngIf="Offer.offer_status !== 'publish'"><span class="badge badge-pill ng-binding badge-pink">
             En attente de validation</span>
         </div>
@@ -18,10 +19,9 @@
 
             <div class="row">
               <div class="form-group mb-4 col-sm-8">
-                <label class="font-bold">Poste occupé </label>
+                <label>Poste occupé </label>
                 <input class="form-control form-control-solid" [(ngModel)]="Editor.postPromote" type="text" name="post"
                   placeholder="Titre de l'offre">
-                  <span class="badge badge-default sm">{{Offer.offer_url}}</span>
               </div>
             </div>
 
@@ -162,7 +162,9 @@
             </div>
           </form>
         </div>
+
         <div class="col-lg-5">
+
           <div class="ibox">
             <div class="ibox-body">
               <h5 class="font-strong mb-4">{{Offer.__info.title}}</h5>
@@ -182,6 +184,14 @@
                 <div class="col-4 text-light">Numéro de téléphone</div>
                 <div class="col-8">{{Offer.__info.phone}}</div>
               </div>
+            </div>
+          </div>
+
+          <div class="ibox">
+            <div class="ibox-body">
+              <app-postuled-candidates [offerid]="ID">
+                Chargement en cours...
+              </app-postuled-candidates>
             </div>
           </div>
         </div>
