--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,11 +31,14 @@
       <div class="modal-body">
         <button class="close" data-dismiss="modal" aria-label="Close"></button>
         <div class="text-center mt-3 mb-4"><i class="ti-lock timeout-icon"></i></div>
-        <div class="text-center h4 mb-3">Set Auto Logout</div>
-        <p class="text-center mb-4">You are about to be signed out due to inactivity.<br>Select after how many minutes of inactivity you log out of the system.</p>
+        <div class="text-center h4 mb-3">Définir la déconnexion automatique (Béta)</div>
+        <p class="text-center mb-4">
+            Vous êtes sur le point d'être déconnecté pour cause d'inactivité.
+            Sélectionnez après combien de minutes d'inactivité vous vous déconnectez du système.
+        </p>
         <div id="timeout-reset-box" style="display:none;">
           <div class="form-group text-center">
-            <button class="btn btn-danger btn-fix btn-air" id="timeout-reset">Deactivate</button>
+            <button class="btn btn-danger btn-fix btn-air" id="timeout-reset">Désactiver</button>
           </div>
         </div>
         <div id="timeout-activate-box">
@@ -44,7 +47,7 @@
               <input class="form-control form-control-line" type="text" name="timeout_count" placeholder="Minutes" id="timeout-count">
             </div>
             <div class="form-group text-center">
-              <button class="btn btn-primary btn-fix btn-air" id="timeout-activate">Activate</button>
+              <button class="btn btn-primary btn-fix btn-air" id="timeout-activate">Activer</button>
             </div>
           </form>
         </div>
@@ -55,145 +58,15 @@
 <!-- END SESSION TIMEOUT MODAL -->
     
 <!-- QUICK SIDEBAR-->
-<div class="quick-sidebar">
+<div class="quick-sidebar" *ngIf="false">
   <ul class="nav nav-tabs tabs-line">
-    <li class="nav-item"><a class="nav-link active" href="#tab-1" data-toggle="tab"><i class="ti-comment"></i>
-        <div>Messages</div></a></li>
-    <li class="nav-item"><a class="nav-link" href="#tab-2" data-toggle="tab"><i class="ti-settings"></i>
-        <div>Settings</div></a></li>
-    <li class="nav-item"><a class="nav-link" href="#tab-3" data-toggle="tab"><i class="ti-notepad"></i>
-        <div>Logs</div></a></li>
+    <li class="nav-item"><a class="nav-link active" href="#tab-2" data-toggle="tab"><i class="ti-settings"></i>
+        <div>Paramètres</div></a></li>
+    <li class="nav-item"><a class="nav-link" href="#tab-3" data-toggle="tab"><i class="ti-comments"></i>
+        <div>Notifications</div></a></li>
   </ul>
   <div class="tab-content">
-    <div class="tab-pane chat-panel active" id="tab-1">
-      <div class="chat-list">
-        <div class="scroller">
-          <div class="media-list"><a class="media" href="javascript:;" data-toggle="show-chat">
-              <div class="media-img"><img class="img-circle" src="./assets/img/users/u3.jpg" alt="image" width="40"/>
-              </div>
-              <div class="media-body"><small class="float-right text-muted">12:05</small>
-                <div class="media-heading">Frank Cruz</div>
-                <div class="font-13 text-lighter">Lorem Ipsum is simply dummy.</div>
-              </div></a><a class="media" href="javascript:;" data-toggle="show-chat">
-              <div class="media-img"><img class="img-circle" src="./assets/img/users/u8.jpg" alt="image" width="40"/>
-              </div>
-              <div class="media-body"><small class="float-right text-right text-success"><i class="badge-point badge-success mr-2"></i>12:05<br><span class="badge badge-danger badge-circle">3</span></small>
-                <div class="media-heading">Lynn Weaver</div>
-                <div class="font-13 text-lighter">Lorem Ipsum is simply dummy.</div>
-              </div></a><a class="media" href="javascript:;" data-toggle="show-chat">
-              <div class="media-img"><img class="img-circle" src="./assets/img/users/u2.jpg" alt="image" width="40"/>
-              </div>
-              <div class="media-body"><small class="float-right text-muted">12:05</small>
-                <div class="media-heading">Becky Brooks</div>
-                <div class="font-13 text-lighter">Lorem Ipsum is simply dummy.</div>
-              </div></a><a class="media" href="javascript:;" data-toggle="show-chat">
-              <div class="media-img"><img class="img-circle" src="./assets/img/users/u5.jpg" alt="image" width="40"/>
-              </div>
-              <div class="media-body"><small class="float-right text-muted">12:05</small>
-                <div class="media-heading">Bob Gonzalez</div>
-                <div class="font-13 text-lighter">Lorem Ipsum is simply dummy.</div>
-              </div></a><a class="media" href="javascript:;" data-toggle="show-chat">
-              <div class="media-img"><img class="img-circle" src="./assets/img/users/u6.jpg" alt="image" width="40"/>
-              </div>
-              <div class="media-body"><small class="float-right text-right text-success"><i class="badge-point badge-success mr-2"></i>12:05</small>
-                <div class="media-heading">Connor Perez</div>
-                <div class="font-13 text-lighter">Lorem Ipsum is simply dummy.</div>
-              </div></a><a class="media" href="javascript:;" data-toggle="show-chat">
-              <div class="media-img"><img class="img-circle" src="./assets/img/users/u11.jpg" alt="image" width="40"/>
-              </div>
-              <div class="media-body"><small class="float-right text-muted">12:05</small>
-                <div class="media-heading">Tyrone Carroll</div>
-                <div class="font-13 text-lighter">Lorem Ipsum is simply dummy.</div>
-              </div></a><a class="media" href="javascript:;" data-toggle="show-chat">
-              <div class="media-img"><img class="img-circle" src="./assets/img/users/u9.jpg" alt="image" width="40"/>
-              </div>
-              <div class="media-body"><small class="float-right text-right text-success"><i class="badge-point badge-success mr-2"></i>12:05<br><span class="badge badge-danger badge-circle">1</span></small>
-                <div class="media-heading">Tammy Newman</div>
-                <div class="font-13 text-lighter">Lorem Ipsum is simply dummy.</div>
-              </div></a><a class="media" href="javascript:;" data-toggle="show-chat">
-              <div class="media-img"><img class="img-circle" src="./assets/img/users/u1.jpg" alt="image" width="40"/>
-              </div>
-              <div class="media-body"><small class="float-right text-muted">12:05</small>
-                <div class="media-heading">Jeanne Gonzalez</div>
-                <div class="font-13 text-lighter">Lorem Ipsum is simply dummy.</div>
-              </div></a><a class="media" href="javascript:;" data-toggle="show-chat">
-              <div class="media-img"><img class="img-circle" src="./assets/img/users/u10.jpg" alt="image" width="40"/>
-              </div>
-              <div class="media-body"><small class="float-right text-muted">12:05</small>
-                <div class="media-heading">Stella Obrien</div>
-                <div class="font-13 text-lighter">Lorem Ipsum is simply dummy.</div>
-              </div></a><a class="media" href="javascript:;" data-toggle="show-chat">
-              <div class="media-img"><img class="img-circle" src="./assets/img/users/u7.jpg" alt="image" width="40"/>
-              </div>
-              <div class="media-body"><small class="float-right text-muted">12:05</small>
-                <div class="media-heading">Jeanne Smith</div>
-                <div class="font-13 text-lighter">Lorem Ipsum is simply dummy.</div>
-              </div></a></div>
-        </div>
-      </div>
-      <div class="messenger">
-        <div class="messenger-header"><a class="messenger-return" href="javascript:;"><span class="ti-angle-left"></span></a>
-          <div class="text-center text-white">
-            <h6 class="mb-1 font-16">Lynn Weaver</h6>
-            <div><span class="badge-point badge-danger mr-2"></span><small>Online</small></div>
-          </div>
-          <div class="dropdown"><a class="messenger-more dropdown-toggle" data-toggle="dropdown"><span class="ti-more-alt"></span></a>
-            <div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item"><span class="ti-heart m-r-10"></span>Add to favorite</a><a class="dropdown-item"><span class="ti-close m-r-10"></span>Clear chat</a></div>
-          </div>
-        </div>
-        <div class="messenger-messages">
-          <div class="scroller">
-            <div class="messenger-message">
-              <div class="message-image"><img src="./assets/img/users/u8.jpg" alt="image"/>
-              </div>
-              <div class="message-body">Hi Jack. You are comfortable today.</div>
-            </div>
-            <div class="messenger-message messenger-message-answer">
-              <div class="message-body">Hi Lynn. Yes Sure.</div>
-            </div>
-            <div class="messenger-message">
-              <div class="message-image"><img src="./assets/img/users/u8.jpg" alt="image"/>
-              </div>
-              <div class="message-body">Hi. What is your main principle in work.</div>
-            </div>
-            <div class="messenger-message messenger-message-answer">
-              <div class="message-body">Our main principle: We work hard to make our client comfortable.</div>
-            </div>
-            <div class="message-time">4.30 PM</div>
-            <div class="messenger-message">
-              <div class="message-image"><img src="./assets/img/users/u8.jpg" alt="image"/>
-              </div>
-              <div class="message-body">
-                <p>Here are some beautiful photos.</p>
-                <div class="mb-3"><img src="./assets/img/blog/culinary-1.jpeg" alt="image"/>
-                </div>
-                <div><img src="./assets/img/blog/01.jpeg" alt="image"/>
-                </div>
-              </div>
-            </div>
-            <div class="messenger-message messenger-message-answer">
-              <div class="message-body">Thanks, they are beautiful.</div>
-            </div>
-            <div class="messenger-message">
-              <div class="message-image"><img src="./assets/img/users/u8.jpg" alt="image"/>
-              </div>
-              <div class="message-body">How many hours are you comfortable.</div>
-            </div>
-            <div class="messenger-message messenger-message-answer">
-              <div class="message-body">In the evening at 6.30 clock.</div>
-            </div>
-          </div>
-        </div>
-        <div class="messenger-form">
-          <div class="messenger-form-inner">
-            <input class="messenger-input" type="text" placeholder="Type a message">
-            <div class="messenger-actions"><span class="messanger-button messanger-paperclip">
-                <input type="file"><i class="la la-paperclip"></i></span><a class="messanger-button" href="javascript:;"><i class="fa fa-send-o"></i></a></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="tab-pane" id="tab-2">
+    <div class="tab-pane active" id="tab-2">
       <div class="scroller">
         <div class="font-bold mb-4 mt-2">APP SETTINGS</div>
         <div class="settings-item">Show notifications
