--- a/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
+++ b/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
@@ -4,27 +4,17 @@
       <h5 class="font-strong mb-4">LES CANDIDATS</h5>
       <div class="flexbox mb-4">
           <div class="row">
-            <div class="col-8">
+            <div class="col-md-6">
               <div class="container mb-4">
                 <div class="row justify-content-start">
-                  <div class="col-6">
-                    <div class="flexbox">
-                      <label class="mb-0 mr-2">Publication:</label>
-                      <select class="selectpicker show-tick form-control" id="type-publication" title="Veuillez choisir"
-                        data-style="btn-solid" data-width="200px">
-                        <option value="">Tout</option>
-                        <option value="pending">En attente</option>
-                        <option value="publish">Publier</option>
-                      </select>
-                    </div>
-                  </div>
                   <div class="col-6">
                     <div class="flexbox">
                       <label class="mb-0 mr-2">Status:</label>
                       <select class="selectpicker show-tick form-control" id="type-status" title="Veuillez choisir"
                         data-style="btn-solid" data-width="200px">
                         <option value="">Tout</option>
-                        <option value="1">Activer</option>
+                        <option value="pending">En attente</option>
+                        <option value="1">Publier</option>
                         <option value="0">Désactiver</option>
                       </select>
                     </div>
@@ -33,11 +23,11 @@
               </div>
             </div>
   
-            <div class="col-4">
+            <div class="col-md-6">
               <div class="flexbox">
                 <div class="input-group-icon input-group-icon-left mr-3">
                   <span class="input-icon input-icon-right font-16"><i class="ti-search"></i></span>
-                  <input class="form-control form-control-rounded form-control-solid" id="key-search" type="text"
+                  <input class="form-control form-control-solid" id="key-search" type="text"
                     placeholder="Rechercher ...">
                 </div>
               </div>
@@ -53,7 +43,6 @@
               <th>L'emploi recherché</th>
               <th>Status</th>
               <th>Réference</th>
-              <th>Publication</th>
               <th>Secteur d'activité</th>
               <th>Date d'inscription</th>
               <th class="no-sort">Action</th>
